--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.3.1",
     "react-flatpickr": "^3.10.13",
     "react-i18next": "^14.0.0",
+    "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1",
     "react-loading-skeleton": "^3.5.0",
     "react-openlayers": "^0.3.0",
