--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.5",
+    "react-spring-3d-carousel": "^1.3.4",
     "react-world-flags": "^1.6.0",
+    "styled-components": "^6.1.13",
     "sweetalert2": "^11.14.5",
     "web-vitals": "^2.1.4"
   },
