--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "flatpickr": "^4.6.13",
+    "https-browserify": "^1.0.0",
     "i18next": "^23.2.3",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.1",
@@ -25,6 +26,7 @@
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-flatpickr": "^3.10.13",
+    "react-floating-whatsapp": "^5.0.8",
     "react-i18next": "^14.0.0",
     "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1",
